1、去掉 maven-compiler-plugin，设置了 UTF-8 以后编译报错控制台输出会乱码 2、在bat脚本设置 MAVEN_OPTS=--enable-preview 参数